--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="#">Works</a>
-            <a href="#">Blog</a>
+            <a href="index.html">Home</a>
+            <a href="work.html">Works</a>
+            <a href="blog.html">Blog</a>
             <a href="#contact">Contact</a>
             <a class="menu" href="">&#9776;</a>
         </nav>
